# Kryon

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINNET_TRANSACTIONS.md  README.md  SECURITY.md  compile_circuits.ps1  generate_mock_data.js  render-build.sh  render.yaml  test_math.js
.github/workflows/: build.yml  ci.yml  keep-alive.yml
demos/: run_invoice_demo.sh
demos/shielded_demo/: derive_stealth.js
docker/: dev.Dockerfile
docs/: RUN_DEMO.md
frontend/: .firebaserc  deposit.js  farm.js  fund.js  master.txt  package-lock.json  package.json  run_54.js
frontend/src/: constants.ts
kryon_backend_orchestrator/: package-lock.json  package.json  test.js  test.ts  test_hash.js  test_methods.js  test_verify.js
kryon_backend_orchestrator/src/: extractVK.ts  oracle.ts  server.ts  test.ts  zkService.js  zkService.ts
kryon_contracts/: Cargo.toml
kryon_contracts/src/: credential.rs  groth16.rs  lib.rs  merkle.rs  multisig.rs  nullifier_registry.rs  sep.rs  shielded.rs  solvency.rs  test.rs
kryon_contracts/test_snapshots/test/: test_expired_attestation_rejected.1.json  test_invalid_oracle_signature_rejected.1.json  test_liquidity_deposit_withdraw.1.json  test_oracle_signature_verification_succeeds.1.json
kryon_zk/age_proof/: Nargo.toml
kryon_zk/aggregation/: README.md
kryon_zk/invoice_proof/: Nargo.toml
kryon_zk/kyc_proof/: Nargo.toml  compile.mjs  package-lock.json  package.json
kryon_zk/merkle_membership/: Nargo.toml
kryon_zk/poseidon_util/: Nargo.toml
kryon_zk/solvency_proof/: Nargo.toml
kryon_zk/zkml_risk_model/: Dockerfile  README.md  app.py  input.json  network.compiled  network.onnx  requirements.txt  risk_model.py  run_ezkl.py  settings.json
public/: pitchDeck.html
scripts/: circom_snarkjs_prover.js  demo.sh  deploy.ps1  deploy.sh  generate_and_submit_proof.sh  vk_pipeline.sh
tmp_api_test/: Cargo.toml
tmp_api_test/src/: lib.rs
vc_pipeline/: issue_and_prove.js  package.json  stealth_transfers.js
(+63 files in other folders)
