[package]
name = "kryon_contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[dev_dependencies]
soroban-sdk = { version = "22.0.0", testutils = true }

[dependencies.ark-groth16]
version = "0.4.0"
default-features = false

[dependencies.ark-bn254]
version = "0.4.0"
default-features = false

[dependencies.ark-serialize]
version = "0.4.0"
default-features = false

[dependencies.ark-crypto-primitives]
version = "0.4.0"
default-features = false
