[package]
name = "kryon_contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

# Arkworks BN254 Groth16  compiled for wasm32-unknown-unknown
# MUST use no_std + alloc features. DO NOT enable std.
[dependencies.ark-groth16]
version = "0.4.0"
default-features = false
features = ["r1cs"]

[dependencies.ark-bn254]
version = "0.4.0"
default-features = false
features = ["curve"]

[dependencies.ark-serialize]
version = "0.4.0"
default-features = false
features = ["derive"]

[dependencies.ark-ff]
version = "0.4.0"
default-features = false

[dependencies.ark-ec]
version = "0.4.0"
default-features = false

[dependencies.ark-std]
version = "0.4.0"
default-features = false

[dependencies.ark-snark]
version = "0.4.0"
default-features = false

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
